Refactoring: Moved style notes to css, Made code more modular

--- a/notebooks/exploration1.ipynb
+++ b/notebooks/exploration1.ipynb
@@ -1521,121 +1521,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "df = pd.read_csv('../data/cta-ridership-clean.csv', parse_dates=['date'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>bus</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>date</th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2001-01-01</th>\n",
-       "      <td>297192</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-01-02</th>\n",
-       "      <td>780827</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-01-03</th>\n",
-       "      <td>824923</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-01-04</th>\n",
-       "      <td>870021</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2001-01-05</th>\n",
-       "      <td>890426</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-27</th>\n",
-       "      <td>394689</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-28</th>\n",
-       "      <td>348599</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-29</th>\n",
-       "      <td>231003</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-30</th>\n",
-       "      <td>447644</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2024-12-31</th>\n",
-       "      <td>386206</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>8766 rows × 1 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               bus\n",
-       "date              \n",
-       "2001-01-01  297192\n",
-       "2001-01-02  780827\n",
-       "2001-01-03  824923\n",
-       "2001-01-04  870021\n",
-       "2001-01-05  890426\n",
-       "...            ...\n",
-       "2024-12-27  394689\n",
-       "2024-12-28  348599\n",
-       "2024-12-29  231003\n",
-       "2024-12-30  447644\n",
-       "2024-12-31  386206\n",
-       "\n",
-       "[8766 rows x 1 columns]"
+       "array(['U', 'W', 'A'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.set_index('date')[[\"bus\"]]"
+    "df[\"day_type\"].unique()"
    ]
   },
   {
